[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI/colosseum.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/MangabeyRegular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Arena/RoundResultsScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 2 )

[node name="RoundResultsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -142.0
margin_top = 46.0
margin_right = 158.0
margin_bottom = -174.0
color = Color( 0.0235294, 0.054902, 0.196078, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RoundResultLabel" type="Label" parent="NinePatchRect/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -105.0
margin_right = 105.0
margin_bottom = 45.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "Round Results"
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -400.0
margin_right = 150.0
__meta__ = {
"_edit_lock_": true
}

[node name="Label2" type="Label" parent="NinePatchRect/ColorRect/VBoxContainer"]
margin_right = 300.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
text = "You:"
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerAttackMethod" type="Label" parent="NinePatchRect/ColorRect/VBoxContainer"]
margin_top = 31.0
margin_right = 300.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
text = "Hit Head"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerDamageDealt" type="Label" parent="NinePatchRect/ColorRect/VBoxContainer"]
margin_top = 62.0
margin_right = 300.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 2 )
text = "Damage Dealt: 0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerHpReg" type="Label" parent="NinePatchRect/ColorRect/VBoxContainer"]
margin_top = 93.0
margin_right = 300.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
text = "HP Reg: 0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/ColorRect/VBoxContainer"]
margin_top = 124.0
margin_right = 300.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label3" type="Label" parent="NinePatchRect/ColorRect/VBoxContainer"]
margin_top = 158.0
margin_right = 300.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 2 )
text = "Enemy:"
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyAttackMethod" type="Label" parent="NinePatchRect/ColorRect/VBoxContainer"]
margin_top = 189.0
margin_right = 300.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 2 )
text = "Hit Head"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="EnemyDamageDealt" type="Label" parent="NinePatchRect/ColorRect/VBoxContainer"]
margin_top = 220.0
margin_right = 300.0
margin_bottom = 247.0
custom_fonts/font = SubResource( 2 )
text = "Damage Dealt: 0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="EnemyHpReg" type="Label" parent="NinePatchRect/ColorRect/VBoxContainer"]
margin_top = 251.0
margin_right = 300.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 2 )
text = "HP Reg: 0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="NinePatchRect"]
margin_left = 521.0
margin_top = 566.0
margin_right = 771.0
margin_bottom = 626.0
color = Color( 0.0235294, 0.0313726, 0.223529, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NextRoundBtn" type="TextureButton" parent="NinePatchRect/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="NinePatchRect/ColorRect2/NextRoundBtn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -22.5
margin_right = 85.0
margin_bottom = 22.5
grow_horizontal = 2
custom_colors/font_color = Color( 0.423529, 0.866667, 0.223529, 1 )
custom_fonts/font = SubResource( 3 )
text = "Next Round"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="pressed" from="NinePatchRect/ColorRect2/NextRoundBtn" to="." method="_on_NextRoundBtn_pressed"]
